--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\usersdb;Database=mobilesdb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MobileApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Serilog":{
     "MinimumLevel":"Warning",
