Добавить проект Diplom.Common и вынести туда общие штуки

--- a/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
+++ b/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
@@ -49,4 +49,8 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Diplom.Common\Diplom.Common.csproj" />
+  </ItemGroup>
 </Project>
