--- a/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
+++ b/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
