Вынести создание Flurl запросов в отдельный класс

--- a/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
+++ b/Diplom.Mobile/Diplom.Mobile/Diplom.Mobile.csproj
@@ -34,10 +34,10 @@
     <EmbeddedResource Update="Views\NewsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Products.xaml">
+    <EmbeddedResource Update="Views\ProductsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\ProductsPage.xaml">
+    <EmbeddedResource Update="Views\AdditionProductsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RegistrationPage.xaml">
@@ -69,6 +69,12 @@
     </Compile>
     <Compile Update="Views\ChangePasswordPage.xaml.cs">
       <DependentUpon>ChangePasswordPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\AdditionProductsPage.xaml.cs">
+      <DependentUpon>AdditionProductsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ProductsPage.xaml.cs">
+      <DependentUpon>ProductsPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\RestorePasswordPage.xaml.cs">
       <DependentUpon>RestorePasswordPage.xaml</DependentUpon>
